--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,11 @@
     margin: 0;
     padding: 0;
 }
-
+body{
+    background-image: url("../img/bg.svg");
+    display: flex;
+    flex-direction: column;
+}
 html, body{
     height: 100%;
     text-transform: none;
@@ -23,7 +27,9 @@ header, footer {
     border-bottom: 2px solid #777777;
     padding-bottom: 20px;
 }
-
+.container{
+    flex-grow: 1;
+}
 .header h4{
     margin: 20px 0 0 15px;
     width: 300px;
@@ -36,13 +42,10 @@ header, footer {
     display: table;
     clear: both;
 }
+
 a {
     text-decoration: none;
-    color: black !important;
-}
-
-a:hover {
-    color:#007bff90;
+    color: black;
 }
 hr {
     border: none;
@@ -58,7 +61,6 @@ main {
 }
 
 footer {
-    margin-top: 500px;
     height: 80px;
     margin-left: 2.3em;
     margin-right: 2.3em;
@@ -119,6 +121,7 @@ footer {
     width: 350px;
     padding: 20px 40px 30px;
     margin: 0 auto;
+    text-align: center;
 }
 
 form h1 {
@@ -272,10 +275,10 @@ form h1 {
         margin: 0 auto;
     }
     .header{
-        width: 1100px;
+        max-width: 1100px;
     }
     .footer{
-        width: 1100px;
+        max-width: 1100px;
     }
     .block23{
         width: 1000px;
@@ -300,4 +303,23 @@ form h1 {
         width: 900px;
     }
     
+}
+
+@keyframes passwor{
+    0%{
+        color: black;
+    }
+    50%{
+        color: rgb(75, 4, 4);
+    }
+    70%{
+        color: rgb(165, 12, 12);
+    }
+    100%{
+        color: red;
+    }
+}
+.forget-pass:hover{
+    color: red;
+    animation: passwor 0.3s ease;
 }
