--- a/css/style(old).css
+++ b/css/style(old).css
@@ -1,6 +1,3 @@
-/*
- https://autoprefixer.github.io
-*/
 
 *{
     margin: 0;
@@ -135,11 +132,16 @@ footer {
 .login-form {
     width: 400px;
     padding: 20px 40px 30px;
-    margin: 0 auto;
+    margin: 20px auto;
 }
 .join{
     margin: 0 auto;
 }
+.join:active{
+    -webkit-box-shadow: inset 0 0 3px 3px #175da8;
+            box-shadow: inset 0 0 3px 3px #175da8;
+}
+
 form h1 {
     margin: 0 0 15px 0;
     font-size: 24px;
@@ -264,6 +266,21 @@ display: flex;
 .people{
     background: url(../img/prgrm.jpg) no-repeat center 5%;
 }
+.p2{
+    background: url(../img/p2.jpg) no-repeat center 5%;
+}
+.p3{
+    background: url(../img/p3.jpg) no-repeat center 5%;
+}
+.p4{
+    background: url(../img/pp4.jpg) no-repeat center 5%;
+}
+.p5{
+    background: url(../img/p5.jpg) no-repeat center 5%;
+}
+.p6{
+    background: url(../img/p6.jpeg) no-repeat center 5%;
+}
 .questions{
     display: -webkit-box;
     display: -ms-flexbox;
@@ -308,11 +325,23 @@ display: flex;
     width: 700px;
     margin: 0 auto;
 }
+.block6{
+    max-height: 300px;
+    line-height: 40px;
+    background: white;
+    margin-bottom: 12px;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
 @media (max-width: 1200px){
     .block1{
         max-width: 100%;
     }
     .block23{
+        max-width: 100%;
+    }
+    .block6{
         max-width: 100%;
     }
 }
@@ -423,19 +452,24 @@ display: flex;
     -webkit-animation: passwor 0.3s ease;
             animation: passwor 0.3s ease;
 }
-@media (max-width: 355px){
+@media (max-width: 378px){
     .header h4{
         width: 100%;
     }
     .login-form input{
-        width: 100%;
+        max-width: 250px;
     }
     .block1{
-        max-width: 100%;
+        max-width: 250px;
         line-height: 30px;
         padding: 20px;
     }
     .forget-remember{
         width: 100%;
+    }
+}
+@media (max-width: 336px){
+    .M{
+        display: none;
     }
 }
