--- a/css/style(old).css
+++ b/css/style(old).css
@@ -73,6 +73,7 @@ main {
 }
 
 footer {
+    border-top: 2px solid #777777;
     height: 80px;
     margin-left: 2.3em;
     margin-right: 2.3em;
@@ -333,7 +334,23 @@ display: flex;
     max-width: 1000px;
     margin: 0 auto;
 }
+.ft_call{
+    float: right;
+    margin-top: -24px;
+}
+.ft_call a{
+    text-align: center;
+}
+.gmail{
+    font-weight: 500;
+    font-style: italic;
+}
 
+@media (max-width: 1400px){
+    .ft_call{
+        margin: 0;
+    }
+}
 @media (max-width: 1200px){
     .block1{
         max-width: 100%;
@@ -414,6 +431,9 @@ display: flex;
 -webkit-box-direction: normal;
     -ms-flex-direction: column;
         flex-direction: column;
+    }
+    .ft_call{
+        float: left;
     }
 }
 
