--- a/css/style(old).css
+++ b/css/style(old).css
@@ -116,7 +116,7 @@ footer {
     content: '';
     width: 100%;
     height: 1px;
-    background-color: orange;
+    background-color: #ff6014;
     position: absolute;
     left: 0;
     -webkit-transform-origin: right;
@@ -208,6 +208,9 @@ form h1 {
     margin-left: 470px;
     text-align: justify;
 
+}
+.form1:hover{
+    text-decoration: underline;
 }
 .form_r p {
     border-left: 3px solid #007bff80;
