--- a/css/style(old).css
+++ b/css/style(old).css
@@ -5,6 +5,18 @@
 * Browsers: last 4 version
 */
 
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
+:root{
+    --color-gray: #777777;
+    --color-orange: #ff6014;
+    --color-blue: #007bff80;
+    --color-submit: #007bff;
+}
 
 *{
     margin: 0;
@@ -41,7 +53,7 @@ header, footer {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    border-bottom: 2px solid #777777;
+    border-bottom: 2px solid var(--color-gray);
     padding-bottom: 20px;
 }
 .container{
@@ -69,8 +81,8 @@ a {
 }
 hr {
     border: none;
-    background-color: #777777;
-    color: #777777;
+    background-color: var(--color-gray);
+    color: var(--color-gray);
     height: 2px;
 }
 main {
@@ -81,7 +93,7 @@ main {
 }
 
 footer {
-    border-top: 2px solid #777777;
+    border-top: 2px solid var(--color-gray);
     height: 80px;
     margin-left: 2.3em;
     margin-right: 2.3em;
@@ -117,7 +129,7 @@ footer {
     content: '';
     width: 100%;
     height: 1px;
-    background-color: #ff6014;
+    background-color: var(--color-orange);
     position: absolute;
     left: 0;
     -webkit-transform-origin: right;
@@ -161,17 +173,23 @@ footer {
     margin-bottom: 10px;
     text-transform: capitalize;
     width: 300px;
-    border: 2px solid #007bff80;
+    border: 2px solid var(--color-blue);
     border-radius: 5px;
 }
 .login-form input[type="submit"] {
-    background:#007bff;
+    background:var(--color-submit);
     color: white;
     border: none;
     border-radius: 5px;
     padding:12px;
     cursor: pointer;
     width: 100px;
+}
+.login-form input[type="submit"]:hover{
+    background-color: #2305cc;
+    -webkit-transition: 1s ease;
+    -o-transition: 1s ease;
+    transition: 1s ease;
 }
 .login-form input[type="checkbox"]{
     vertical-align: middle;
@@ -216,11 +234,15 @@ form h1 {
 .ogo:hover{
     text-decoration: underline;
     font-weight: 600;
+    -webkit-transition: font-weight 0.1s ease-in;
+    -o-transition: font-weight 0.1s ease-in;
     transition: font-weight 0.1s ease-in;
 }
 .ogo2:hover{
     text-decoration: underline;
     font-weight: 600;
+    -webkit-transition: font-weight 0.1s ease-in;
+    -o-transition: font-weight 0.1s ease-in;
     transition: font-weight 0.1s ease-in;
 }
 
@@ -419,7 +441,7 @@ display: flex;
     width: 200px;
     min-height: 130px;
     height: auto;
-    border-bottom: 1px solid #777777;
+    border-bottom: 1px solid var(--color-gray);
 }
 .block1 a:hover{
     text-decoration: underline;
